Fix all Java compilation warnings
- Replace deprecated URL(String) constructor with URI.create(String).toURL()
- Fixed deprecation warnings in HttpProxyHandler, Test, and WebXWebShotTest
- All compilation warnings have been eliminated

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>